--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -11,20 +11,20 @@ ISSN: 2070-1721
              Dragonfly Key Exchange
 
 要旨
-    この文章はパスワードとパスフレーズを使った真正性を証明する離散対数暗号作成法を用いた鍵交換を記す．
-    それは能動的な攻撃，受動的な攻撃，そしてオフラインの辞書攻撃に耐性がある．この文章はCrypto Forum Reserch Group (CFRG) によって保護されている．
+    このドキュメントはパスワードとパスフレーズを使った真正性を証明する離散対数暗号作成法を用いた鍵交換を記す．
+    それは能動的な攻撃，受動的な攻撃，そしてオフラインの辞書攻撃に耐性がある．このドキュメントはCrypto Forum Reserch Group (CFRG) によって保護されている．
 
 このメモの位置づけ
-    この文章はインターネット標準化手段の仕様書ではない．それは情報提供を目的として公開されている．
+    このドキュメントはインターネット標準化手段の仕様書ではない．それは情報提供を目的として公開されている．
 
     このドキュメントはInternet Reserch Task Force (IRTF) によって保護されている．IRTFは研究と開発活動のインターネットのつながりの結果を出版する．このRFCはInternet Reserch Task Force (IRCF) の暗号フォーラムリサーチグループの1人以上の個々の意見を表す．IRSG((Internet Research Steering Group))に妥当だと認められた出版物はインターネット標準化のどのレベルにもふさわしいものではない．RFC5741のセクション2を見て．
 
-    この文章の今の位置づけ，正誤表，およびそれに対する意見についての情報は， http://www.rfc-editor.org/info/rfc7664 から得ることができるだろう．
+    このドキュメントの今の位置づけ，正誤表，およびそれに対する意見についての情報は， http://www.rfc-editor.org/info/rfc7664 から得ることができるだろう．
 
 著作権表記
     Copyright (c) 2015 IETF Trust and the persons identified as the document authors.  All rights reserved.
 
-    この文章は，この文章の発行日に実施する BCP 78 と IETF文書のIETF法的規定(http://trustee.ietf.org/license-info)の対象になる．注意してこれらの文章を見てください，なぜなら，この文章に関しての権利と制限を説明しているからです．
+    このドキュメントは，このドキュメントの発行日に実施する BCP 78 と IETF文書のIETF法的規定(http://trustee.ietf.org/license-info)の対象になる．注意してこれらのドキュメントを見てほしい，なぜなら，このドキュメントに関しての権利と制限を説明しているからだ．
 
 目次
     1.    はじめに
@@ -52,4 +52,11 @@ ISSN: 2070-1721
 
 1. はじめに
 
-    パスワードと
+    パスワードとパスフレーズは今日のインターネット上で認証として広く行われている方法である．認証のためにパスワードやパスフレーズを使う多くのプロトコルはパスワードの認識の証拠として演繹されたパスワードデータを交換する(例えば，[RFC7296]や[RCF5403])．これはどこかで攻撃者が演繹されたパスワードデータに一致するまで潜在的なパスワードのプールを通して走らせて，実証する物を計算することで，プロトコル上で積極的または受動的な攻撃のどちらかから十分な知識を収集するオフライン辞書攻撃まで交換を開く．
+
+    このプロトコルはおそらくオフライン辞書攻撃に抵抗するパスワードを使って相互認証を行う方法で効率の良い交換を果たすための離散対数暗号を使う．このドキュメントにおいてのCFRGの統一見解は大まかであった．
+
+1.1. 言語についての用語法
+    このドキュメント中のキーワードの "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", そして "OPTIONAL" は RFC 2119 で説明されたように解釈される．
+
+1.2. 定義
