さすがにつかれた

--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -60,3 +60,19 @@ ISSN: 2070-1721
     このドキュメント中のキーワードの "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", そして "OPTIONAL" は RFC 2119 で説明されたように解釈される．
 
 1.2. 定義
+1.2.1. 表記
+    次に述べる表記はこのメモで使われている．
+
+    パスワード
+        共有し，秘密で，かつ潜在的に低い混乱な単語またはフレーズまたはコードまたは同等の者と相互に認証するための証明書として使われるキー．
+        人間の言語の文字に制限されない．
+    a | b
+        文字列"a"というビットと文字列"b"というビットを連結することを示す．
+    len(a)
+        文字列"a"のビット長を示す．
+    lsb(a)
+        文字列"a"の最も最後のビットを返す
+    lgr(a, b)
+        
+
+1.2.2. 辞書攻撃からの抵抗
