なんとなくコミット

--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -1,7 +1,8 @@
 encoded by UTF-8
 
+// TODO 2. (~23) -> 3. (~30?) -> 1.2.1. , 1.2.2. (~7?) -> 4. 5. and more (~15?)
 RFC 7664 https://tools.ietf.org/html/rfc7664
-
+before menu -> menu -> 1.1. -> 1.2.1.(not finish) -> 2.1. -> 2.2 ->
 -----------------------------------
 Internet Reserch Task Force (IRTF)        D.Harkins, Ed.
 論調の運用: 7664                  Aruba Networks
@@ -26,6 +27,7 @@ ISSN: 2070-1721
 
     このドキュメントは，このドキュメントの発行日に実施する BCP 78 と IETF文書のIETF法的規定(http://trustee.ietf.org/license-info)の対象になる．注意してこれらのドキュメントを見てほしい，なぜなら，このドキュメントに関しての権利と制限を説明しているからだ．
 
+// TODO menu (finished)
 目次
     1.    はじめに
         1.1.    言語についての用語法
@@ -38,8 +40,8 @@ ISSN: 2070-1721
     3.    The Dragonfly Key Exchange
         3.1.    前提((仮定))
         3.2.    パスワード元の語源
-            3.2.1.   ECCグループと Hunting and Pecking
-            3.2.2.   MODPグループと Hunting and Pecking
+            3.2.1.   ECC群と Hunting and Pecking
+            3.2.2.   MODP群と Hunting and Pecking
         3.3.    約束交換
         3.4.    確認交換
     4.    セキュリティの考慮すべき点
@@ -73,6 +75,21 @@ ISSN: 2070-1721
     lsb(a)
         文字列"a"の最も最後のビットを返す
     lgr(a, b)
-        
+        "a"と素数"b"をとり，ルジャンドルの記号を返す((aとbが互いに素であるとき，aが法bの平方剰余であるとき +1，平方非剰余であるとき -1))
+    min(a, b)
+        "a"と"b"の文字列の辞書的に小さいほう，または"a"と"b"が等しいときゼロ(0)を返す．
+    max(a, b)
+        "a"と"b"の文字列の辞書的に大きいほう，または"a"と"b"が等しいときゼロ(0)を返す．
 
+    このメモにおいての慣習は // TODO 1.2.1.
 1.2.2. 辞書攻撃からの抵抗
+    // TODO 1.2.2.
+
+2. 離散対数暗号
+    Dragonflyは鍵合意と認証を成し遂げるために離散対数暗号を使う([SP800-56A]を参照)．交換するためのそれぞれの当事者は領域パラメータの特定のまとまりに関して短命の鍵を演繹する(ここでは，群として呼ぶ )．群は有限領域暗号(FFC)または楕円曲線暗号(ECC)に準拠することができる．
+
+    3つの演算は群の両方の典型として定義される．
+
+    o   スカラー演算  -- もう一つの要素を生成するためにスカラーと群の中の要素を選択する -- Z = scalar-op(x, Y)
+    o   
+2.1. 楕円曲線暗号
