2. 辺りをやった

--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -1,8 +1,8 @@
 encoded by UTF-8
 
-// TODO 2. (~23) -> 3. (~30?) -> 1.2.1. , 1.2.2. (~7?) -> 4. 5. and more (~15?)
+// TODO 2. (~23) -> 3. (~3?) -> 　1.2.2. (~7?) -> 4. 5. and more (~15?)
 RFC 7664 https://tools.ietf.org/html/rfc7664
-before menu -> menu -> 1.1. -> 1.2.1.(not finish) -> 2.1. -> 2.2 ->
+before menu -> menu -> 1. -> 1.1. -> 1.2.1. -> 2. ->
 -----------------------------------
 Internet Reserch Task Force (IRTF)        D.Harkins, Ed.
 論調の運用: 7664                  Aruba Networks
@@ -81,7 +81,7 @@ ISSN: 2070-1721
     max(a, b)
         "a"と"b"の文字列の辞書的に大きいほう，または"a"と"b"が等しいときゼロ(0)を返す．
 
-    このメモにおいての慣習は // TODO 1.2.1.
+    このメモにおいての慣習は大文字の文字または頭文字語の有限巡回群の中の要素を表すと同時にスカラーは小文字の文字または頭文字語を示すことだ．楕円曲線上の点を表す要素は暗黙の複数の要素からなる自然((自然数?)) を持っている，すなわちそれはxとy座標の両方を持っている．
 1.2.2. 辞書攻撃からの抵抗
     // TODO 1.2.2.
 
@@ -91,5 +91,6 @@ ISSN: 2070-1721
     3つの演算は群の両方の典型として定義される．
 
     o   スカラー演算  -- もう一つの要素を生成するためにスカラーと群の中の要素を選択する -- Z = scalar-op(x, Y)
-    o   
+    o   要素演算 -- 3つめの要素を生成するために群の中の2つの要素を選択する -- Z = element-op(X, Y)
+    o   逆演算 -- 要素を選択して群の単位元要素 // TODO 翻訳わからん
 2.1. 楕円曲線暗号
