--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -33,7 +33,7 @@ ISSN: 2070-1721
         1.1.    言語についての用語法
         1.2.    定義
             1.2.1.   表記
-            1.2.2.   辞書攻撃からの抵抗
+            1.2.2.   辞書攻撃への抵抗
     2.    離散対数暗号
         2.1.    楕円曲線暗号
         2.2.    有限領域暗号
@@ -69,11 +69,11 @@ ISSN: 2070-1721
         共有し，秘密で，かつ潜在的に低い混乱な単語またはフレーズまたはコードまたは同等の者と相互に認証するための証明書として使われるキー．
         人間の言語の文字に制限されない．
     a | b
-        文字列"a"というビットと文字列"b"というビットを連結することを示す．
+        ビット列"a"とビット列"b"を連結することを示す．
     len(a)
-        文字列"a"のビット長を示す．
+        ビット列"a"のビット長を示す．
     lsb(a)
-        文字列"a"の最も最後のビットを返す
+        ビット列"a"の最も最後のビットを返す
     lgr(a, b)
         "a"と素数"b"をとり，ルジャンドルの記号を返す((aとbが互いに素であるとき，aが法bの平方剰余であるとき +1，平方非剰余であるとき -1))
     min(a, b)
@@ -82,7 +82,7 @@ ISSN: 2070-1721
         "a"と"b"の文字列の辞書的に大きいほう，または"a"と"b"が等しいときゼロ(0)を返す．
 
     このメモにおいての慣習は大文字の文字または頭文字語の有限巡回群の中の要素を表すと同時にスカラーは小文字の文字または頭文字語を示すことだ．楕円曲線上の点を表す要素は暗黙の複数の要素からなる自然((自然数?)) を持っている，すなわちそれはxとy座標の両方を持っている．
-1.2.2. 辞書攻撃からの抵抗
+1.2.2. 辞書攻撃への抵抗
     // TODO 1.2.2.
 
 2. 離散対数暗号
@@ -90,7 +90,18 @@ ISSN: 2070-1721
 
     3つの演算は群の両方の典型として定義される．
 
-    o   スカラー演算  -- もう一つの要素を生成するためにスカラーと群の中の要素を選択する -- Z = scalar-op(x, Y)
-    o   要素演算 -- 3つめの要素を生成するために群の中の2つの要素を選択する -- Z = element-op(X, Y)
-    o   逆演算 -- 要素を選択して群の単位元要素 // TODO 翻訳わからん
+    o   スカラー演算  -- もう一つの要素を生成するためにスカラーと群の中の要素を選択する -- Z = scalar-op(x, Y)．
+    o   要素演算 -- 3つめの要素を生成するために群の中の2つの要素を選択する -- Z = element-op(X, Y)．
+    o   逆演算 -- 要素を選択して2つの要素操作が群の単位元要素の生成であるようなもう一つの要素を返す -- Y = inverse (X)．
 2.1. 楕円曲線暗号
+    Dragonflyを使ったECC群のための領域パラメータは，
+
+    o   素数である p ，決定的な素数領域 GF(p)．暗号の群は楕円曲線上の点からなる完全な楕円曲線群の部分群となり，曲線方程式の条件を満たすGF(p)からの要素，特定する要素として役に立つ 無限遠の点 と一緒に．ECC群のための群操作は楕円曲線上の足し算である．
+
+    o   定義した曲線方程式のGF(p)からの要素 a, b．GF(p) x ((ここでは積(外積)の意味？)) GF(p) の中の点(x, y)は(y^2 - x^3 - a*x - b) mod p が0のときだけ楕円曲線上となる．
+
+    o   ECC群の生成として役に立つ楕円曲線上の点 G ．楕円曲線加算について順番なので選ばれたGは十分に大きな素数である．
+
+    o   素数の，GとGによって生成された暗号の部分群の大きさのような順番のq．
+
+    (x,y)のペアは次のとき，有効な要素である 1) xとy座標の両方が0より大きく，かつ典型的な根底にある領域の素数より小さい 2) xとy座標が曲線の方程式の条件を満たし，無限遠の…ではない曲線上の有効な点をもたらす．もしどちらかが条件を満たしていなかったら，(x,y)のペアは有効な要素ではない．
