にゃーん(おわらん)

--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -48,7 +48,7 @@ ISSN: 2070-1721
     5.    リファレンス
         5.1.    標準的((模範的))なリファレンス
         5.2.    有益なリファレンス
-    謝辞((承認))
+    謝辞
     筆者の住所
 
 
@@ -90,13 +90,13 @@ ISSN: 2070-1721
 
     3つの演算は群の両方の典型として定義される．
 
-    o   スカラー演算  -- もう一つの要素を生成するためにスカラーと群の中の要素を選択する -- Z = scalar-op(x, Y)．
+    o   スカラー演算  -- 別の要素を生成するためにスカラーと群の中の要素を選択する -- Z = scalar-op(x, Y)．
     o   要素演算 -- 3つめの要素を生成するために群の中の2つの要素を選択する -- Z = element-op(X, Y)．
-    o   逆演算 -- 要素を選択して2つの要素操作が群の単位元要素の生成であるようなもう一つの要素を返す -- Y = inverse (X)．
+    o   逆演算 -- 要素を選択して2つの要素演算が群の単位元要素の生成であるような別の要素を返す -- Y = inverse (X)．
 2.1. 楕円曲線暗号
     Dragonflyを使ったECC群のための領域パラメータは，
 
-    o   素数である p ，決定的な素数領域 GF(p)．暗号の群は楕円曲線上の点からなる完全な楕円曲線群の部分群となり，曲線方程式の条件を満たすGF(p)からの要素，特定する要素として役に立つ 無限遠の点 と一緒に．ECC群のための群操作は楕円曲線上の足し算である．
+    o   素数である p ，決定的な素数領域 GF(p)．暗号の群は楕円曲線上の点からなる完全な楕円曲線群の部分群となり，曲線方程式の条件を満たすGF(p)からの要素，特定する要素として役に立つ 無限遠の点 と一緒に．ECC群のための群演算は楕円曲線上の足し算である．
 
     o   定義した曲線方程式のGF(p)からの要素 a, b．GF(p) x ((ここでは積(外積)の意味？)) GF(p) の中の点(x, y)は(y^2 - x^3 - a*x - b) mod p が0のときだけ楕円曲線上となる．
 
@@ -104,4 +104,35 @@ ISSN: 2070-1721
 
     o   素数の，GとGによって生成された暗号の部分群の大きさのような順番のq．
 
-    (x,y)のペアは次のとき，有効な要素である 1) xとy座標の両方が0より大きく，かつ典型的な根底にある領域の素数より小さい 2) xとy座標が曲線の方程式の条件を満たし，無限遠の…ではない曲線上の有効な点をもたらす．もしどちらかが条件を満たしていなかったら，(x,y)のペアは有効な要素ではない．
+    (x,y)のペアは次のとき，有効な要素である 1) xとy座標の両方が0より大きく，かつ典型的な根底にある領域の素数より小さい 2) xとy座標が曲線の方程式の条件を満たし，無限遠の点ではない曲線上の有効な点をもたらす．もしどちらかが条件を満たしていなかったら，(x,y)のペアは有効な要素ではない．
+
+    スカラー演算はそれ自身の何倍かの曲線上の点を追加する．点Yは別の点Zを生産するためにx倍掛けられる．
+
+        Z = scalar-op(x, Y) = x*y
+
+    要素演算は曲線上の2点を追加する．点XとYは別の点Zを生産するために加算される．
+
+        Z = element-op(X, Y) = X + Y
+
+    逆関数は要素の加算で，それの逆は "0"，それは楕円曲線群の無限遠の点であることのように定義される．
+
+        R + inverse(R) = "0"
+
+    楕円曲線群は群要素を整数に変換する写像関数である必要があり，q = F(Q)．写像関数は移される点のx座標を返す((ために))このメモを使った．
+
+    scalar-op(x, Y) は定義に従ってelement-op()のXの反復として見られることができる．
+
+        Y = scalar-op(1, Y)
+
+        Y = scalar-op(x, Y) = element-op(Y, scalar-op(x-1, Y)), x > 1に関して
+
+    楕円曲線上の2点を加算する方法(言い換えれば， element-op(X, Y))の定義は[RFC6090]に見ることができる．
+
+    ノート : これは別の楕円曲線領域パラメータであり，余因子で， // TODO 後回し
+
+2.2.    有限領域暗号
+    Dragonflyに使われているFFC群のための領域パラメータは，
+
+    o   素数のp，決定的な素数領域GF(p)，整数((完全体))のpを法とする．FCC群はGF(p)* の部分群となり，GF(p)の0ではない要素乗法群．FCCのための群演算はpを法とする掛け算だ．
+
+    o  FFC群についての生成器として役に立つGF(p)*の中の要素のG．Gはそれの
