--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -2,7 +2,6 @@ encoded by UTF-8
 
 // TODO 2. (~23) -> 3. (~3?) -> 　1.2.2. (~7?) -> 4. 5. and more (~15?)
 RFC 7664 https://tools.ietf.org/html/rfc7664
-before menu -> menu -> 1. -> 1.1. -> 1.2.1. -> 2. ->
 -----------------------------------
 Internet Reserch Task Force (IRTF)        D.Harkins, Ed.
 論調の運用: 7664                  Aruba Networks
@@ -135,4 +134,52 @@ ISSN: 2070-1721
 
     o   素数のp，決定的な素数領域GF(p)，整数((完全体))のpを法とする．FCC群はGF(p)* の部分群となり，GF(p)の0ではない要素乗法群．FCCのための群演算はpを法とする掛け算だ．
 
-    o  FFC群についての生成器として役に立つGF(p)*の中の要素のG．Gはそれの
+    o  FFC群についての生成元として役に立つGF(p)*の中の要素のG．Gはその乗法の位数は((p-1) / 2)の十分に大きい素数除数であるような．
+
+    o   素数のq，Gの乗法の位数であり，したがってGによって生成されるGF(p)の暗号法の部分群のサイズでもある．
+
+    数字はFFC群で恒等の要素で，もし 1) 1から素数pに1満たない間，排他的な(言い換えれば，1 < 要素 < p - 1)．かつ 2) 群位数に基づく要素のモジュール累乗法はone(1)に等しい．それらの条件のどちらかが適用できなかったら，数字は恒等の要素ではない．
+
+    スカラー演算は素数を法とした発生元の累乗法である．
+3.    The Dragonfly Key Exchange
+    Dragonfly exchangeには2つのパーティがあり，AliceとBobの利便性と因習を目的にして．2つのパーティは帯域外の構造が実証された共有のパスワードを持っていて，それら両方は特殊領域パラメータ集合(ECCまたはFFCのどちらか)を使うことに同意する．Dragonfly exchangeの中では，AliceとBobの両方は共有パスワードについて同一の見解を共有する．言い換えれば，一面ではパスワードを保持し，他の一面では不可逆的な検証者を保持している場合には，それは"拡張"されない．これはDragonflyに伝統的なクライアントサーバープロトコルと，不変の役割があっていずれの当事者も開始することができる(かつ両方の当事者が同時に実行することができる)ピアツーピアアプリケーションもまた使われることを許す．
+
+    Dragonfly exchangeの開始に先立って，ツーピアは選ばれたドメインパラメータ集合の中で秘密の要素を導く．秘密の要素を決定するための2つの"hunting-and-pecking"技術，一つはECCのためで，一つはFFCのため，はSection3.2.に記載されている，しかし，合意された安全で決定的な方法の上ならなんでも利用できる．例えば，[hash2ec]に記載されている技術はECC群のために利用できる．
+
+    Dragonfly exchange は2つのメッセージ交換から構成され，双方がパスワードの一つの推測を約束する"Commit exchange"と，双方がパスワードの情報を確認する"Confirm Exchange"．Dragonfly exchangeを実行することの副作用は，本物であると証明された，共有された，暗号の強度が合意済みの群によって設定された秘密鍵．
+
+    Dragonflyはランダム関数，H()，マッピング関数，F()，鍵導出関数，KDF()を使う．
+3.1.    前提
+    Dragonflyプロトコルに対する攻撃を避けるために，いくつかの基本的な前提は作られる:
+
+    1. 関数Hはxビットの長さで固定のバイナリ列の上に可変長のバイナリ列の写像をとる"ランダムオラクル"([RANDOR]を参照)．
+
+    H: {0,1}^* --> {0,1}^x
+
+    2. 関数Fは群の中から要素を選び，整数を返すマッピング関数．ECC群に関して，関数Fは(楕円曲線上の点の)要素のx座標を返す，FFC群に関して，関数Fは恒等関数である(FFC群のすべての要素が既に素数より小さい整数であるため)．
+
+    ECC: x = F(P), where P=(x,y)
+
+    FFC: x = F(x)
+
+    3. 関数KDFは，キーを引き伸ばすためのキー，k，キーに結合するためのラベル，label，および目的の出力の表示を指し示す，nを必要とする鍵導出関数であり（[SP800-108]などを参照)，
+
+    stretch = KDF-n(k, label)
+
+    len(stretch)がnに等しくなるように．
+
+    4. 選ばれた群に関しての離散対数問題は難しい．すなわち，G,PとY = G^x mod pが与えられたとき，xを決定することは計算的に実行不可能だ．同じように，ECC群に関して，曲線定義と生成元とY = x * Gが与えられたとき，xを決定することは計算的に実行不可能だ．
+
+    5. 2つのピアによって共有されているパスワードが引き出されるパスワードのプールが存在する．このプールは例えば辞書の文字から構成されている．このプールの各パスワードは共有されたパスワードが存在する確率が平等だ．全ての潜在的な攻撃者はパスワードから構成されたこのプールを入手する機会を持っている．
+
+    6. ピアは質のいい乱数を生成する能力を持っている．
+3.2.    パスワード元の語源
+
+3.2.1.   ECC群と Hunting and Pecking
+3.2.2.   MODP群と Hunting and Pecking
+3.3.    約束交換
+3.4.    確認交換
+4.    セキュリティの考慮すべき点
+5.    リファレンス
+5.1.    標準的((模範的))なリファレンス
+5.2.    有益なリファレンス
