make summary.md

--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -38,7 +38,7 @@ ISSN: 2070-1721
         2.2.    有限領域暗号
     3.    The Dragonfly Key Exchange
         3.1.    前提((仮定))
-        3.2.    パスワード元の語源
+        3.2.    パスワード要素の導出
             3.2.1.   ECC群と Hunting and Pecking
             3.2.2.   MODP群と Hunting and Pecking
         3.3.    約束交換
@@ -53,7 +53,7 @@ ISSN: 2070-1721
 
 1. はじめに
 
-    パスワードとパスフレーズは今日のインターネット上で認証として広く行われている方法である．認証のためにパスワードやパスフレーズを使う多くのプロトコルはパスワードの認識の証拠として演繹されたパスワードデータを交換する(例えば，[RFC7296]や[RCF5403])．これはどこかで攻撃者が演繹されたパスワードデータに一致するまで潜在的なパスワードのプールを通して走らせて，実証する物を計算することで，プロトコル上で積極的または受動的な攻撃のどちらかから十分な知識を収集するオフライン辞書攻撃まで交換を開く．
+    パスワードとパスフレーズは今日のインターネット上で認証として広く行われている方法である．認証のためにパスワードやパスフレーズを使う多くのプロトコルはパスワードの認識の証拠として演繹されたパスワードデータを交換する(例えば，[RFC7296]や[RCF5403])．これはどこかで攻撃者が演繹されたパスワードデータに一致するまで潜在的なパスワードのプールを通して走らせて，実証する物を計算することで，プロトコル上で積極的または受動的な攻撃のどちらかから十分な知識を収集するオフライン辞書攻撃まで交換を公開する．
 
     このプロトコルはおそらくオフライン辞書攻撃に抵抗するパスワードを使って相互認証を行う方法で効率の良い交換を果たすための離散対数暗号を使う．このドキュメントにおいてのCFRGの統一見解は大まかであった．
 
@@ -65,7 +65,7 @@ ISSN: 2070-1721
     次に述べる表記はこのメモで使われている．
 
     パスワード
-        共有し，秘密で，かつ潜在的に低い混乱な単語またはフレーズまたはコードまたは同等の者と相互に認証するための証明書として使われるキー．
+        共有し，秘密で，かつ潜在的に低エントロピーな単語またはフレーズまたはコードまたは同等の者と相互に認証するための証明書として使われるキー．
         人間の言語の文字に制限されない．
     a | b
         ビット列"a"とビット列"b"を連結することを示す．
@@ -80,7 +80,7 @@ ISSN: 2070-1721
     max(a, b)
         "a"と"b"の文字列の辞書的に大きいほう，または"a"と"b"が等しいときゼロ(0)を返す．
 
-    このメモにおいての慣習は大文字の文字または頭文字語の有限巡回群の中の要素を表すと同時にスカラーは小文字の文字または頭文字語を示すことだ．楕円曲線上の点を表す要素は暗黙の複数の要素からなる自然((自然数?)) を持っている，すなわちそれはxとy座標の両方を持っている．
+    このメモにおいての慣習は大文字の文字または頭文字語は有限巡回群の中の要素を表すと同時にスカラーは小文字の文字または頭文字語を示すことだ．楕円曲線上の点を表す要素は暗黙の複数の要素からなる自然数を持っている，すなわちそれはxとy座標の両方を持っている．
 1.2.2. 辞書攻撃への抵抗
     // TODO 1.2.2.
 
@@ -173,8 +173,16 @@ ISSN: 2070-1721
     5. 2つのピアによって共有されているパスワードが引き出されるパスワードのプールが存在する．このプールは例えば辞書の文字から構成されている．このプールの各パスワードは共有されたパスワードが存在する確率が平等だ．全ての潜在的な攻撃者はパスワードから構成されたこのプールを入手する機会を持っている．
 
     6. ピアは質のいい乱数を生成する能力を持っている．
-3.2.    パスワード元の語源
+3.2.    パスワード要素の導出
+    情報の交換に先立って，ピアは選ばれた領域パラメータ集合によって定義された群の中でパスワード要素(PE)と呼ばれる秘密の要素を導かなければならない(MUST)．パスワードを知らない攻撃者の視点から，PEは取り決められた群のランダムな要素となる．2つの例が完全性のためにここに記載されているが，
 
+    PEを戻すために，両方のピアはパスワードの共通認識を持たなければならない(MUST)．// TODO : どのパスワードも必要な処理があり(例えば，国際化を支えるために)，必要な処理が行われたパスワードはそのとき共有の認証情報として使われる．もしどちらか一方がパスワードのハッシュ化された版を蓄えていたら(ランダムデータと一体になったパスワードのハッシュ法は「ソルト」と呼ばれる)，ソルトを交換の開始に先立って相手に伝えることは必要になるだろう．，ハッシュ化されたパスワードはそのとき共有の認証情報として使われる．
+
+    // TODO: Note:
+
+    PEを選ぶための確定的仮定はseedを選ぶことと，そのとき群特異的なhunting-and-pecking技術，一つはFFCのためでもう一つはECCのため，を行うことから始める．
+
+    与えられたパスワードからPEを見つけるのに向いている，hunting-and-pecking ループの反復の数を決定しようとする試みであるサイドチャネル攻撃を阻止するために，安全な要素，k，は少なくともk反復法はいつも行われているということができるようにするということが使われている．vi
 3.2.1.   ECC群と Hunting and Pecking
 3.2.2.   MODP群と Hunting and Pecking
 3.3.    約束交換
