ちょっとすすんだ

--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -95,7 +95,7 @@ ISSN: 2070-1721
 2.1. 楕円曲線暗号
     Dragonflyを使ったECC群のための領域パラメータは，
 
-    o   素数である p ，決定的な素数領域 GF(p)．暗号の群は楕円曲線上の点からなる完全な楕円曲線群の部分群となり，曲線方程式の条件を満たすGF(p)からの要素，特定する要素として役に立つ 無限遠の点 と一緒に．ECC群のための群演算は楕円曲線上の足し算である．
+    o   素数である p ，決定的な素数領域 GF(p)．暗号の群は楕円曲線上の点からなる完全な楕円曲線群の部分群となり，曲線方程式の条件を満たすGF(p)からの要素，無限遠の点と一緒に特定する要素として役に立つ．ECC群のための群演算は楕円曲線上の足し算である．
 
     o   定義した曲線方程式のGF(p)からの要素 a, b．GF(p) x ((ここでは積(外積)の意味？)) GF(p) の中の点(x, y)は(y^2 - x^3 - a*x - b) mod p が0のときだけ楕円曲線上となる．
 
