--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -107,9 +107,9 @@ ISSN: 2070-1721
 
     スカラー演算はそれ自身の何倍かの曲線上の点を追加する．点Yは別の点Zを生産するためにx倍掛けられる．
 
-        Z = scalar-op(x, Y) = x*y
+        Z = scalar-op(x, Y) = x*Y
 
-    要素演算は曲線上の2点を追加する．点XとYは別の点Zを生産するために加算される．
+    要素演算は曲線上の2点を加算する．点XとYは別の点Zを生産するために加算される．
 
         Z = element-op(X, Y) = X + Y
 
