鳥羽市鳥羽市で3章終わり

--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -182,11 +182,88 @@ ISSN: 2070-1721
 
     PEを選ぶための確定的仮定はseedを選ぶことと，そのとき群特異的なhunting-and-pecking技術，一つはFFCのためでもう一つはECCのため，を行うことから始める．
 
-    与えられたパスワードからPEを見つけるのに向いている，hunting-and-pecking ループの反復の数を決定しようとする試みであるサイドチャネル攻撃を阻止するために，安全な要素，k，は少なくともk反復法はいつも行われているということができるようにするということが使われている．vi
+    与えられたパスワードからPEを見つけるのに向いている，hunting-and-pecking ループの反復の数を決定しようとする試みであるサイドチャネル攻撃を阻止するために，安全な要素，k，は少なくともk反復法はいつも行われているということができるようにするということが使われている．ECCペアを探すためのhunting-and-peckingループの反復のnは一つの確率は
+
+    セキュリティパラメータkは，PEがkの反復が十分に小さいよりも大きい値を取る値を探す確率のような十分に大きな(値を)セットすべきである．(Section 4 を参照)
+
+    最初に，8ビットカウンタは1にセットされて，シークレットベース((良い日本語が思いつかない))が一方向性関数の，2人の参加者のアリスとボブ，パスワード，カウンタの固有値の合成を使っていて，それは
+
+    base = H(max(Alice,Bob) | min(Alice,Bob) | password | counter)
+
+    と表せる．固有値((固有性?))は必須の順序付けを提供するためにmax()関数とmin()関数に渡される．
+
+    baseはそのとき[FIS186-4]の技術をつかって伸長される．鍵導出関数KDFは長さが群ドメインパラメータ集合＋一時的な値が導き出すための不変定数64から((つくられる))素数の長さと等しいビットストリームを生成するために使われ，一時的な値は生成するseedに減られるモジュール式で，
+
+    n = len(p) + 64
+
+    temp = KDF-n(base, "Dragonfly Hunting and Pecking")
+
+    seed = (temp mod (p - 1)) + 1
+
+    文字列は生成された一時的な値が実例となる目的のみのためでなければならない．Dragonfly key exchangeの実現はKDFとともに使用明細ラベルを使うべきである．
+
+    Note:
+
+    seedはそのとき群特異的なhunting-and-pecking技術に移動される．
+
+    //ここ日本語が地獄
+    もしDragonflyがランダムワンタイムパスワードを交換する能力をもつプロトコルならば，それらは各々がプロトコルは違うPEを生成する続きが起こるようにするためのベースの計算結果を加えられるべき．
 3.2.1.   ECC群と Hunting and Pecking
+
+    ECC仕様のhunting-and-pecking技術は楕円曲線上の正当な点が見つかるまでループすることを伴う．seedは x^2 + a*x + b がpの法の平方余剰であるかどうかをチェックする曲線方程式とともにx座標として使われる．もし違ったら，カウンタをインクリメントして，新しいbaseとseedを生成し，hunting and peckingを続ける．もしpを法とする平方余剰なら，x座標はseedの価値を割り当てられて，かつ現在のbaseは記憶される．hunting-and-pecking loopが終わったとき，x座標はy座標を導く曲線方程式と((して？))つかわれる．あいまいさはy座標が正当であろうという評価と，記憶されたbaseの下位ビットが明確にy座標をただす決定をする評価して以来存在する．結果として発生する(x,y)ペアはパスワード要素(PE)からくる．
+
+    アルゴリズム的に，プロセスはこのようになる．
+
+    /* 省略 */
+
+    valueが素数の余りの平方余剰かどうかを調べることはサイドチャネルアタックの中の値に関する情報を漏らすことができる((=サイドチャネル攻撃によって情報が漏れてしまう))．そのため，
+
+
+
+    アルゴリズム的に，valueが平方余剰かに関係なく見つけるマスキングテクニックはこのようになる．
+
+    /*省略*/
+
 3.2.2.   MODP群と Hunting and Pecking
+    MODP仕様の hunting-and-pecking技術はランダムな要素，それは生成器として使うとき，を探すことを必然的に伴う．秘密の生成器は
+
+    アルゴリズム的に，プロセスはこのようになる．
 3.3.    約束交換
+    約束交換の中で，双方はパスワードの一つの推量を約束する．ピアはスカラーと要素を生成して，お互いに交換して，共通かつ共有された秘密を生成するために相手のスカラーと要素を処理する．
+
+    最初に，各々のピアは2つのランダムな数字を生成する，それらは1よりも大きくて選ばれたドメインパラメータ集合からなるorderより小さいプライベートかつ覆い隠す．
+
+    1 < private < p
+    1 < mast < p
+
+    それらの2つの秘密とパスワード要素はそのときスカラーと要素を構成するために使われる．
+
+    scalar = (private + mask) mod q
+    Element = inverse(scalar-op(mask, PE))
+
+    もしスカラーが2より小さいなら，プライベートとマスクは投げ捨てて，新しい値を生成しなければならない．一度正当なスカラーと要素が作られると，マスクは長さが必要とされなくて，取り返しのつかないほど壊れてしまう．
+
+    ピアは彼らのスカラーと要素を交換して，peer-scalarとPeer-Elementとみなす，ピアのスカラーと要素をチェックする．もしピアが同一のスカラーと要素なら，言い換えると，もしスカラーがpeer-scalarと恒等かつ要素がPeer-Elementと恒等ならば，それは鏡映攻撃の現れで，その交換は失敗されなければならない．もし値が一致しなければ，peer-scalarとPeer-Elementは有効な要素となる．有効なpeer-scalarを目的として，それは1から排他的なqの間でなければならない．Peer-Elementの妥当性確認は暗号システムの種類による，ECC要素のような(x,y)ペアの妥当性確認はSection2.1に定められていて，FFC要素のような数字の正当性確認はSection2.2.に定められている．もし一方のpeer-scalarかPeer-Elementの妥当性確認が失敗したら，交換は終わって，認証は失敗しなければならない．もし両方のpeer-scalarかPeer-Elementが正当だったら，共有された秘密を導くためのパスワード要素といっしょに使われて，ssは
+
+    ss = F(scalar-op(private,element-op(peer-Element,scalar-op(peer-scalar, PE))))
+
+    鍵の分離と暗号法の衛生を実行するために，共有された秘密は二つのサブキー，承認キーのkckとマスターキーのmk，の中で伸長される．サブキーのそれぞれは少なく見積もっても選ばれた群に中で使われている素数の長さ．
+
+    kck | mk = KDF-n(ss, "Dragonfly Key Derivation")
+
+    where n = len(p)*2
 3.4.    確認交換
+    確認交換の中で，双方は彼らの共通の秘密と，それゆえの，共有のパスワードの所有権を持っていることを生成する．
+
+    確認交換はランダム関数H()，それは確認鍵と約束交換の中の交換された2つのスカラーと要素からなる，の出力データの交換で構成される．スカラーと要素の順番は，スカラーが要素より前で，送り主の値は受け取り主の値よりも前．だから各々のピアからの見方は，このことを起こすだろう．
+
+    confirm = H(kck | scalar | peer-scalar | Element | Peer-Element | <sender-id>)
+
+    <sender-id>の裏付けるメッセージの送り主の固有性はどこに．この固有性は，当然Section3.2の中のbaseの生成の中の確認交換の送り主によって寄与されるだろう．
+
+    二つのピアはそれらの確認で交換され，受け取った相手のピアの確認書の正当性を検証する．もし相手のピアの確認書が有効ならば，認証が成功して，有効でなければ，認証が失敗する．
+
+    もし認証が失敗したら，Dragonfly交換は取り返しのつかないほど壊れ続けるに違いなく，全ての一時的な状態が固有の一端としてつくられる．もし認証が失敗しなかったら，mkは証明された，もう一つのプロトコル，例としてIPsecで相手のデータを保護するために，で使うことができる秘密鍵としてエクスポートできる．
 4.    セキュリティの考慮すべき点
 5.    リファレンス
 5.1.    標準的((模範的))なリファレンス
