elliptic_curveで独立させるべきか否か

--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -101,7 +101,7 @@ ISSN: 2070-1721
 
     o   ECC群の生成として役に立つ楕円曲線上の点 G ．楕円曲線加算について順番なので選ばれたGは十分に大きな素数である．
 
-    o   素数の，GとGによって生成された暗号の部分群の大きさのような順番のq．
+    o   素数のqは，Gの位数なので，したがってGによって生成された暗号部分群の大きさ．
 
     (x,y)のペアは次のとき，有効な要素である 1) xとy座標の両方が0より大きく，かつ典型的な根底にある領域の素数より小さい 2) xとy座標が曲線の方程式の条件を満たし，無限遠の点ではない曲線上の有効な点をもたらす．もしどちらかが条件を満たしていなかったら，(x,y)のペアは有効な要素ではない．
 
@@ -186,7 +186,7 @@ ISSN: 2070-1721
 
     セキュリティパラメータkは，PEがkの反復が十分に小さいよりも大きい値を取る値を探す確率のような十分に大きな(値を)セットすべきである．(Section 4 を参照)
 
-    最初に，8ビットカウンタは1にセットされて，シークレットベース((良い日本語が思いつかない))が一方向性関数の，2人の参加者のアリスとボブ，パスワード，カウンタの固有値の合成を使っていて，それは
+    最初に，8ビットカウンタは1にセットされて，シークレットベース((良い日本語が思いつかない))が一方向性関数の，2人の参加者のアリスとボブ，パスワード，カウンタの固有値の合成を使っていて，それは，
 
     base = H(max(Alice,Bob) | min(Alice,Bob) | password | counter)
 
