強引な実装

--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -176,7 +176,7 @@ ISSN: 2070-1721
 3.2.    パスワード要素の導出
     情報の交換に先立って，ピアは選ばれた領域パラメータ集合によって定義された群の中でパスワード要素(PE)と呼ばれる秘密の要素を導かなければならない(MUST)．パスワードを知らない攻撃者の視点から，PEは取り決められた群のランダムな要素となる．2つの例が完全性のためにここに記載されているが，選択したグループの要素に，秘密の文字列を決定論的にマッピングする方法はすべて使用できます。たとえば、ECCグループの[hash2ec]の手法です．ここで説明した手法とは異なる手法を使用する場合、秘密文字列にはピアのIDを含める必要があります（SHOULD）．
 
-    PEを戻すために，両方のピアはパスワードの共通認識を持たなければならない(MUST)．// TODO : どのパスワードも必要な処理があり(例えば，国際化を支えるために)，必要な処理が行われたパスワードはそのとき共有の認証情報として使われる．もしどちらか一方がパスワードのハッシュ化された版を蓄えていたら(ランダムデータと一体になったパスワードのハッシュ法は「ソルト」と呼ばれる)，ソルトを交換の開始に先立って相手に伝えることは必要になるだろう．，ハッシュ化されたパスワードはそのとき共有の認証情報として使われる．
+    PEを戻すために，両方のピアはパスワードの共通認識を持たなければならない(MUST)．// TODO : どのパスワードも必要な処理があった場合(例えば，国際化を支えるために)，必要な処理が行われたパスワードはそのとき共有の認証情報として使われる．もしどちらか一方がパスワードのハッシュ化された版を蓄えていたら(ランダムデータと一体になったパスワードのハッシュ法は「ソルト」と呼ばれる)，ソルトを交換の開始に先立って相手に伝えることは必要になるだろう．，ハッシュ化されたパスワードはそのとき共有の認証情報として使われる．
 
     // TODO: Note:
 
