diffie_hellman鍵共有にECCを適用

--- a/translation/translation.txt
+++ b/translation/translation.txt
@@ -186,7 +186,7 @@ ISSN: 2070-1721
 
     セキュリティパラメータkは，PEがkの反復が十分に小さいよりも大きい値を取る値を探す確率のような十分に大きな(値を)セットすべきである．(Section 4 を参照)
 
-    最初に，8ビットカウンタは1にセットされて，シークレットベース((良い日本語が思いつかない))が一方向性関数の，2人の参加者のアリスとボブ，パスワード，カウンタの固有値の合成を使っていて，それは，
+    最初に，8ビットカウンタは1にセットされて，シークレットベース((良い日本語が思いつかない))な一方向性関数の，2人の参加者のアリスとボブ，パスワード，カウンタの固有値の合成を使っていて，それは，
 
     base = H(max(Alice,Bob) | min(Alice,Bob) | password | counter)
 
